# advent-2021

./: .gitpod.yml  Cargo.toml  LICENSE  README.md  points.txt
day-01/: Cargo.toml
day-01/src/: lib.rs  main.rs
day-02/: Cargo.toml
day-02/src/: command.rs  lib.rs  main.rs
day-03/: Cargo.toml
day-03/src/: lib.rs  main.rs
day-04/: Cargo.toml
day-04/src/: board.rs  lib.rs  main.rs
day-05/: Cargo.toml
day-05/src/: lib.rs  line.rs  main.rs
day-06/: Cargo.toml
day-06/src/: lib.rs  main.rs
day-07/: Cargo.toml
day-07/src/: lib.rs  main.rs
day-08/: Cargo.toml
day-08/src/: lib.rs  main.rs
day-09/: Cargo.toml
day-09/src/: lib.rs  main.rs
day-10/: Cargo.toml
day-10/src/: lib.rs
day-11/: Cargo.toml
day-11/src/: lib.rs
day-12/: Cargo.toml
day-12/src/: lib.rs
day-13/: Cargo.toml
day-13/src/: lib.rs  main.rs  point.rs  rule.rs
day-14/: Cargo.toml
day-14/src/: lib.rs  minmax.rs  rule.rs
day-15/: Cargo.toml
day-15/src/: lib.rs  main.rs
day-16/: Cargo.toml
day-16/src/: lib.rs  main.rs  packet.rs
day-16/src/packet/: operator.rs  visitor.rs
day-17/: Cargo.toml
day-17/proptest-regressions/: math.txt
day-17/src/: lib.rs  math.rs
day-18/: Cargo.toml
day-18/src/: lib.rs  main.rs  node.rs  reduce.rs  sum.rs
day-18/src/node/: parser.rs
day-18/src/visitors/: explode.rs  mod.rs  split.rs
integration-test/: Cargo.toml  reference.txt
run-all/: Cargo.toml
run-all/src/: main.rs
