[package]
name = "day-18"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-utils = { git = "https://github.com/utter-step/advent-utils" }

displaydoc = "0.2"
thiserror = "1"

[dev-dependencies]
indoc = "1"