[package]
name = "run-all"
version = "0.1.0"
authors = ["Vlad Stepanov <8uk.8ak@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent-utils = { git = "https://github.com/utter-step/advent-utils" }

day-01 = { path = "../day-01" }
day-02 = { path = "../day-02" }
day-03 = { path = "../day-03" }
day-04 = { path = "../day-04" }
day-05 = { path = "../day-05" }
day-06 = { path = "../day-06" }
day-07 = { path = "../day-07" }
day-08 = { path = "../day-08" }
day-09 = { path = "../day-09" }
day-10 = { path = "../day-10" }
day-11 = { path = "../day-11" }
day-12 = { path = "../day-12" }
day-13 = { path = "../day-13" }
day-14 = { path = "../day-14" }
day-15 = { path = "../day-15" }
day-16 = { path = "../day-16" }
day-17 = { path = "../day-17" }
